{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 20,
  "lineage": "c2e26659-a757-1720-f1a8-aa8451e14547",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:049554081904:loadbalancer/nginx-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "nginx-elb-1173018784.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "nginx-elb",
            "idle_timeout": 60,
            "instances": [
              "i-04848e818b99cde90",
              "i-0c1fa5a5cfdd6db48"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "nginx-elb",
            "security_groups": [
              "sg-058e583ef74c2b11b"
            ],
            "source_security_group": "049554081904/nginx_elb_sg",
            "source_security_group_id": "sg-058e583ef74c2b11b",
            "subnets": [
              "subnet-08ac961e3424d1931",
              "subnet-0e7f5565de22d5acf"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_instance.nginx",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.elb-sg",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.aws_linux",
            "data.aws_availability_zones.available",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2c275b42dee0b81",
            "arn": "arn:aws:ec2:us-east-1:049554081904:instance/i-04848e818b99cde90",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "development_nginx_profile",
            "id": "i-04848e818b99cde90",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PluralsightKeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ec374ae01f7fab73",
            "private_dns": "ip-10-0-0-246.ec2.internal",
            "private_ip": "10.0.0.246",
            "public_dns": "ec2-3-208-92-250.compute-1.amazonaws.com",
            "public_ip": "3.208.92.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03e40cf415086d71a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ac961e3424d1931",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-nginx1"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-nginx1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-063eb9b4a9c4ec63f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.aws_linux",
            "data.aws_availability_zones.available",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2c275b42dee0b81",
            "arn": "arn:aws:ec2:us-east-1:049554081904:instance/i-0c1fa5a5cfdd6db48",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "development_nginx_profile",
            "id": "i-0c1fa5a5cfdd6db48",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PluralsightKeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a04b60f15a0485af",
            "private_dns": "ip-10-0-1-101.ec2.internal",
            "private_ip": "10.0.1.101",
            "public_dns": "ec2-54-159-242-137.compute-1.amazonaws.com",
            "public_ip": "54.159.242.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b4f64432c6c822f8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7f5565de22d5acf",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-nginx2"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-nginx2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-063eb9b4a9c4ec63f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.aws_linux",
            "data.aws_availability_zones.available",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049554081904:internet-gateway/igw-071557274f46b6269",
            "id": "igw-071557274f46b6269",
            "owner_id": "049554081904",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-igw"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-igw"
            },
            "vpc_id": "vpc-0bda5fd9827c0d7a5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049554081904:route-table/rtb-099d1136af1467c9f",
            "id": "rtb-099d1136af1467c9f",
            "owner_id": "049554081904",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-071557274f46b6269",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bda5fd9827c0d7a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b8f33651edb5e18",
            "route_table_id": "rtb-099d1136af1467c9f",
            "subnet_id": "subnet-08ac961e3424d1931"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070239832fe9dff9c",
            "route_table_id": "rtb-099d1136af1467c9f",
            "subnet_id": "subnet-0e7f5565de22d5acf"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049554081904:security-group/sg-058e583ef74c2b11b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058e583ef74c2b11b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_elb_sg",
            "name_prefix": "",
            "owner_id": "049554081904",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bda5fd9827c0d7a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049554081904:security-group/sg-063eb9b4a9c4ec63f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063eb9b4a9c4ec63f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "049554081904",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bda5fd9827c0d7a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049554081904:subnet/subnet-08ac961e3424d1931",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-08ac961e3424d1931",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "049554081904",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-subnet1"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-subnet1"
            },
            "vpc_id": "vpc-0bda5fd9827c0d7a5"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049554081904:subnet/subnet-0e7f5565de22d5acf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e7f5565de22d5acf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "049554081904",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-subnet2"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-subnet2"
            },
            "vpc_id": "vpc-0bda5fd9827c0d7a5"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049554081904:vpc/vpc-0bda5fd9827c0d7a5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05f65053faccbf939",
            "default_route_table_id": "rtb-02674894e31d5a79e",
            "default_security_group_id": "sg-0dd39dbc3fea668fb",
            "dhcp_options_id": "dopt-02124d6452bf13a5b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bda5fd9827c0d7a5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02674894e31d5a79e",
            "owner_id": "049554081904",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-vpc"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "development",
              "Name": "development-vpc"
            }
          }
        }
      ]
    }
  ]
}